--- a/templetes/base.html
+++ b/templetes/base.html
@@ -59,7 +59,7 @@
   {% block content %} {% endblock %}
 
   <!-- Footer Section  -->
-  <!-- <footer>
+  <footer>
     <div class="container mt-4 px-4">
       <div class="row justify-content-center custom-bg-primary text-center rounded p-3 py-4 text-white">
         <div class="col-md-2 px-0">
@@ -83,7 +83,7 @@
         </div>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
