--- a/templetes/base.html
+++ b/templetes/base.html
@@ -65,9 +65,9 @@
         <div class="col-md-2 px-0">
           <a href="{% url 'home' %}" class="text-white">Home</a>
         </div>
-        <div class="col-md-2 px-0">
+        <!-- <div class="col-md-2 px-0">
           <a href="#" class="text-white">Services</a>
-        </div>
+        </div> -->
         <div class="col-md-2 px-0">
           <a href="#" class="text-white">About</a>
         </div>
